tests/NormalTests/paczka1/fuzzy1/86384965.err
Error in line 19: A831 A826 95,0
Error in line 22: C4B S584 638,5
Error in line 35: r2qkZWIDv A826 58,6
Error in line 37: A831 S894 63,8
